stand generate class
